--- a/UcmaKit.Rtc.Acd.Service/UcmaKit.Rtc.Acd.Service.csproj
+++ b/UcmaKit.Rtc.Acd.Service/UcmaKit.Rtc.Acd.Service.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8597BB98-0432-4DA9-AF8F-B0B212E07634}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{105BC605-86C2-463F-AFE3-A68E601DA292}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ISI.Rtc.Acd</RootNamespace>
-    <AssemblyName>ISI.Rtc.Acd</AssemblyName>
+    <RootNamespace>ISI.Rtc.Acd.Service</RootNamespace>
+    <AssemblyName>ISI.Rtc.Acd.Service</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,6 +31,10 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>ISI.Rtc.Acd.Service.AcdService</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Rtc.Collaboration, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
@@ -45,7 +50,8 @@
     <Reference Include="Microsoft.Threading.Tasks.Extensions.Desktop">
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.Extensions.Desktop.dll</HintPath>
     </Reference>
-    <Reference Include="Nito.AsyncEx">
+    <Reference Include="Nito.AsyncEx, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Nito.AsyncEx.1.0.0\lib\net45\Nito.AsyncEx.dll</HintPath>
     </Reference>
     <Reference Include="Nito.AsyncEx.Concurrent">
@@ -56,6 +62,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
     <Reference Include="System.Reactive.Core">
@@ -67,6 +74,7 @@
     <Reference Include="System.Reactive.Linq">
       <HintPath>..\packages\Rx-Linq.2.1.30214.0\lib\Net45\System.Reactive.Linq.dll</HintPath>
     </Reference>
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -74,52 +82,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AcdActionResultStatus.cs" />
-    <Compile Include="AcdContact.cs" />
-    <Compile Include="AcdApplication.cs" />
-    <Compile Include="AcdContactTransfer.cs" />
-    <Compile Include="AcdActionResult.cs" />
-    <Compile Include="AcdCascade.cs" />
-    <Compile Include="AcdCascadeLevel.cs" />
-    <Compile Include="AcdContext.cs" />
-    <Compile Include="AcdDelay.cs" />
-    <Compile Include="AcdHoldAudio.cs" />
-    <Compile Include="AcdMultiDelegate.cs" />
-    <Compile Include="AcdHoldContext.cs" />
-    <Compile Include="AcdHold.cs" />
-    <Compile Include="AcdAction.cs" />
-    <Compile Include="AcdRemoteEndpoint.cs" />
-    <Compile Include="AcdTransfer.cs" />
-    <Compile Include="AcdRepeat.cs" />
-    <Compile Include="AcdParallel.cs" />
-    <Compile Include="AcdSchedule.cs" />
-    <Compile Include="AcdDelegate.cs" />
-    <Compile Include="AcdTimeout.cs" />
-    <Compile Include="AcdTimeRange.cs" />
-    <Compile Include="AcdAllowSchedule.cs" />
-    <Compile Include="AcdSerial.cs" />
-    <Compile Include="AcdDebug.cs" />
-    <Compile Include="AcdWeekSchedule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AcdInstaller.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="AcdService.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="AcdService.Designer.cs">
+      <DependentUpon>AcdService.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Audio\Lync.wma" />
+    <ProjectReference Include="..\UcmaKit.Rtc.Acd\UcmaKit.Rtc.Acd.csproj">
+      <Project>{8597bb98-0432-4da9-af8f-b0b212e07634}</Project>
+      <Name>UcmaKit.Rtc.Acd</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UcmaKit.Rtc.Service\UcmaKit.Rtc.Service.csproj">
+      <Project>{8177e927-5f4e-4d0e-ac1c-390d2980b3d3}</Project>
+      <Name>UcmaKit.Rtc.Service</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UcmaKit.Rtc.Util\UcmaKit.Rtc.Util.csproj">
+      <Project>{55a21f94-8a1e-4b86-922c-8a9a3ed63e89}</Project>
+      <Name>UcmaKit.Rtc.Util</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UcmaKit.Rtc\UcmaKit.Rtc.csproj">
+      <Project>{8dd80684-381c-468b-96f1-1a6f6b1733b8}</Project>
+      <Name>UcmaKit.Rtc</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\UcmaKit.Rtc.Util\ISI.Rtc.Util.csproj">
-      <Project>{55a21f94-8a1e-4b86-922c-8a9a3ed63e89}</Project>
-      <Name>ISI.Rtc.Util</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UcmaKit.Rtc\ISI.Rtc.csproj">
-      <Project>{8dd80684-381c-468b-96f1-1a6f6b1733b8}</Project>
-      <Name>ISI.Rtc</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Audio\Ring.wav" />
+    <EmbeddedResource Include="AcdService.resx">
+      <DependentUpon>AcdService.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
