--- a/UcmaKit.Rtc.Acd.Tests/UcmaKit.Rtc.Acd.Tests.csproj
+++ b/UcmaKit.Rtc.Acd.Tests/UcmaKit.Rtc.Acd.Tests.csproj
@@ -56,9 +56,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\UcmaKit.Rtc.Acd\ISI.Rtc.Acd.csproj">
+    <ProjectReference Include="..\UcmaKit.Rtc.Acd\UcmaKit.Rtc.Acd.csproj">
       <Project>{8597bb98-0432-4da9-af8f-b0b212e07634}</Project>
-      <Name>ISI.Rtc.Acd</Name>
+      <Name>UcmaKit.Rtc.Acd</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
