--- a/UcmaKit.Rtc.Acd.App/UcmaKit.Rtc.Acd.App.csproj
+++ b/UcmaKit.Rtc.Acd.App/UcmaKit.Rtc.Acd.App.csproj
@@ -4,17 +4,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8151D34D-9C6C-4541-91B5-820C23EF9D2F}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{C49E66BB-6EA3-4A14-973A-BFB218E2AEDA}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ISI.Rtc.VoiceXml</RootNamespace>
-    <AssemblyName>ISI.Rtc.VoiceXml</AssemblyName>
+    <RootNamespace>ISI.Rtc.Acd.App</RootNamespace>
+    <AssemblyName>ISI.Rtc.Acd.App</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,6 +25,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -32,23 +34,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Rtc.Collaboration, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Rtc.Collaboration.AudioVideo.VoiceXml, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.Speech, Version=11.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.Speech.VoiceXml, Version=11.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.Threading.Tasks">
+    <Reference Include="Microsoft.Threading.Tasks, Version=1.0.12.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Threading.Tasks.Extensions">
+    <Reference Include="Microsoft.Threading.Tasks.Extensions, Version=1.0.12.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Threading.Tasks.Extensions.Desktop">
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.Extensions.Desktop.dll</HintPath>
     </Reference>
-    <Reference Include="Nito.AsyncEx">
+    <Reference Include="Nito.AsyncEx, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Nito.AsyncEx.1.0.0\lib\net45\Nito.AsyncEx.dll</HintPath>
     </Reference>
     <Reference Include="Nito.AsyncEx.Concurrent">
@@ -58,38 +58,42 @@
       <HintPath>..\packages\Nito.AsyncEx.1.0.0\lib\net45\Nito.AsyncEx.Enlightenment.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Net" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnhandledDisconnectException.cs" />
-    <Compile Include="UnhandledPageThrowException.cs" />
-    <Compile Include="VoiceXmlApplication.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\UcmaKit.Rtc.Util\ISI.Rtc.Util.csproj">
+    <ProjectReference Include="..\UcmaKit.Rtc.Acd.Service\UcmaKit.Rtc.Acd.Service.csproj">
+      <Project>{105bc605-86c2-463f-afe3-a68e601da292}</Project>
+      <Name>UcmaKit.Rtc.Acd.Service</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UcmaKit.Rtc.Acd\UcmaKit.Rtc.Acd.csproj">
+      <Project>{8597bb98-0432-4da9-af8f-b0b212e07634}</Project>
+      <Name>UcmaKit.Rtc.Acd</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UcmaKit.Rtc.Service\UcmaKit.Rtc.Service.csproj">
+      <Project>{8177e927-5f4e-4d0e-ac1c-390d2980b3d3}</Project>
+      <Name>UcmaKit.Rtc.Service</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UcmaKit.Rtc.Util\UcmaKit.Rtc.Util.csproj">
       <Project>{55a21f94-8a1e-4b86-922c-8a9a3ed63e89}</Project>
-      <Name>ISI.Rtc.Util</Name>
+      <Name>UcmaKit.Rtc.Util</Name>
     </ProjectReference>
-    <ProjectReference Include="..\UcmaKit.Rtc.VoiceXml.Data\ISI.Rtc.VoiceXml.Data.csproj">
-      <Project>{dc6d7815-511f-49ec-8fe8-48f96e44fd6b}</Project>
-      <Name>ISI.Rtc.VoiceXml.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UcmaKit.Rtc\ISI.Rtc.csproj">
+    <ProjectReference Include="..\UcmaKit.Rtc\UcmaKit.Rtc.csproj">
       <Project>{8dd80684-381c-468b-96f1-1a6f6b1733b8}</Project>
-      <Name>ISI.Rtc</Name>
+      <Name>UcmaKit.Rtc</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
