--- a/UcmaKit.Rtc.VoiceXml.App/UcmaKit.Rtc.VoiceXml.App.csproj
+++ b/UcmaKit.Rtc.VoiceXml.App/UcmaKit.Rtc.VoiceXml.App.csproj
@@ -4,17 +4,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4BD7613A-5207-4BC9-9C53-D033245ACFDD}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <ProjectGuid>{31BA5546-2CC4-48DC-BD43-8CC095FAAFAC}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ISI.Rtc.VoiceXml.Service</RootNamespace>
-    <AssemblyName>ISI.Rtc.VoiceXml.Service</AssemblyName>
+    <RootNamespace>ISI.Rtc.VoiceXml.App</RootNamespace>
+    <AssemblyName>ISI.Rtc.VoiceXml.App</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,25 +25,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>x64</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>ISI.Rtc.VoiceXml.Service.VoiceXmlService</StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Rtc.Collaboration, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.Rtc.Collaboration.AudioVideo.VoiceXml, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.Speech, Version=11.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.Speech.VoiceXml, Version=11.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Threading.Tasks">
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.dll</HintPath>
     </Reference>
@@ -62,60 +53,38 @@
       <HintPath>..\packages\Nito.AsyncEx.1.0.0\lib\net45\Nito.AsyncEx.Enlightenment.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Net" />
-    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="VoiceXmlInstaller.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VoiceXmlService.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="VoiceXmlService.Designer.cs">
-      <DependentUpon>VoiceXmlService.cs</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\UcmaKit.Rtc.Service\ISI.Rtc.Service.csproj">
-      <Project>{8177e927-5f4e-4d0e-ac1c-390d2980b3d3}</Project>
-      <Name>ISI.Rtc.Service</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UcmaKit.Rtc.Util\ISI.Rtc.Util.csproj">
-      <Project>{55a21f94-8a1e-4b86-922c-8a9a3ed63e89}</Project>
-      <Name>ISI.Rtc.Util</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UcmaKit.Rtc.VoiceXml\ISI.Rtc.VoiceXml.csproj">
-      <Project>{8151d34d-9c6c-4541-91b5-820c23ef9d2f}</Project>
-      <Name>ISI.Rtc.VoiceXml</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UcmaKit.Rtc\ISI.Rtc.csproj">
-      <Project>{8dd80684-381c-468b-96f1-1a6f6b1733b8}</Project>
-      <Name>ISI.Rtc</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UcmaKit.Rtc.VoiceXml.Data\ISI.Rtc.VoiceXml.Data.csproj">
-      <Project>{dc6d7815-511f-49ec-8fe8-48f96e44fd6b}</Project>
-      <Name>ISI.Rtc.VoiceXml.Data</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="VoiceXmlService.resx">
-      <DependentUpon>VoiceXmlService.cs</DependentUpon>
-    </EmbeddedResource>
+    <ProjectReference Include="..\UcmaKit.Rtc.VoiceXml.Core\UcmaKit.Rtc.VoiceXml.Service.csproj">
+      <Project>{4bd7613a-5207-4bc9-9c53-d033245acfdd}</Project>
+      <Name>UcmaKit.Rtc.VoiceXml.Service</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UcmaKit.Rtc.VoiceXml.Data\UcmaKit.Rtc.VoiceXml.Data.csproj">
+      <Project>{dc6d7815-511f-49ec-8fe8-48f96e44fd6b}</Project>
+      <Name>UcmaKit.Rtc.VoiceXml.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UcmaKit.Rtc.VoiceXml\UcmaKit.Rtc.VoiceXml.csproj">
+      <Project>{8151d34d-9c6c-4541-91b5-820c23ef9d2f}</Project>
+      <Name>UcmaKit.Rtc.VoiceXml</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UcmaKit.Rtc\UcmaKit.Rtc.csproj">
+      <Project>{8dd80684-381c-468b-96f1-1a6f6b1733b8}</Project>
+      <Name>UcmaKit.Rtc</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
