--- a/UcmaKit.Rtc.VoiceXml/UcmaKit.Rtc.VoiceXml.csproj
+++ b/UcmaKit.Rtc.VoiceXml/UcmaKit.Rtc.VoiceXml.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{105BC605-86C2-463F-AFE3-A68E601DA292}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <ProjectGuid>{8151D34D-9C6C-4541-91B5-820C23EF9D2F}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ISI.Rtc.Acd.Service</RootNamespace>
-    <AssemblyName>ISI.Rtc.Acd.Service</AssemblyName>
+    <RootNamespace>ISI.Rtc.VoiceXml</RootNamespace>
+    <AssemblyName>ISI.Rtc.VoiceXml</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -22,7 +22,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,27 +30,25 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject>ISI.Rtc.Acd.Service.AcdService</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Rtc.Collaboration, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Rtc.Collaboration.AudioVideo.VoiceXml, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="Microsoft.Threading.Tasks, Version=1.0.12.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Microsoft.Speech, Version=11.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Speech.VoiceXml, Version=11.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Threading.Tasks">
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Threading.Tasks.Extensions, Version=1.0.12.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Microsoft.Threading.Tasks.Extensions">
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Threading.Tasks.Extensions.Desktop">
       <HintPath>..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.Extensions.Desktop.dll</HintPath>
     </Reference>
-    <Reference Include="Nito.AsyncEx, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Nito.AsyncEx">
       <HintPath>..\packages\Nito.AsyncEx.1.0.0\lib\net45\Nito.AsyncEx.dll</HintPath>
     </Reference>
     <Reference Include="Nito.AsyncEx.Concurrent">
@@ -61,20 +58,11 @@
       <HintPath>..\packages\Nito.AsyncEx.1.0.0\lib\net45\Nito.AsyncEx.Enlightenment.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
-    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Net" />
-    <Reference Include="System.Reactive.Core">
-      <HintPath>..\packages\Rx-Core.2.1.30214.0\lib\Net45\System.Reactive.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Reactive.Interfaces">
-      <HintPath>..\packages\Rx-Interfaces.2.1.30214.0\lib\Net45\System.Reactive.Interfaces.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Reactive.Linq">
-      <HintPath>..\packages\Rx-Linq.2.1.30214.0\lib\Net45\System.Reactive.Linq.dll</HintPath>
-    </Reference>
-    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -83,42 +71,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AcdInstaller.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="AcdService.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="AcdService.Designer.cs">
-      <DependentUpon>AcdService.cs</DependentUpon>
-    </Compile>
+    <Compile Include="UnhandledDisconnectException.cs" />
+    <Compile Include="UnhandledPageThrowException.cs" />
+    <Compile Include="VoiceXmlApplication.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\UcmaKit.Rtc.Acd\ISI.Rtc.Acd.csproj">
-      <Project>{8597bb98-0432-4da9-af8f-b0b212e07634}</Project>
-      <Name>ISI.Rtc.Acd</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UcmaKit.Rtc.Service\ISI.Rtc.Service.csproj">
-      <Project>{8177e927-5f4e-4d0e-ac1c-390d2980b3d3}</Project>
-      <Name>ISI.Rtc.Service</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UcmaKit.Rtc.Util\ISI.Rtc.Util.csproj">
-      <Project>{55a21f94-8a1e-4b86-922c-8a9a3ed63e89}</Project>
-      <Name>ISI.Rtc.Util</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UcmaKit.Rtc\ISI.Rtc.csproj">
-      <Project>{8dd80684-381c-468b-96f1-1a6f6b1733b8}</Project>
-      <Name>ISI.Rtc</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="AcdService.resx">
-      <DependentUpon>AcdService.cs</DependentUpon>
-    </EmbeddedResource>
+    <ProjectReference Include="..\UcmaKit.Rtc.Util\UcmaKit.Rtc.Util.csproj">
+      <Project>{55a21f94-8a1e-4b86-922c-8a9a3ed63e89}</Project>
+      <Name>UcmaKit.Rtc.Util</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UcmaKit.Rtc.VoiceXml.Data\UcmaKit.Rtc.VoiceXml.Data.csproj">
+      <Project>{dc6d7815-511f-49ec-8fe8-48f96e44fd6b}</Project>
+      <Name>UcmaKit.Rtc.VoiceXml.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\UcmaKit.Rtc\UcmaKit.Rtc.csproj">
+      <Project>{8dd80684-381c-468b-96f1-1a6f6b1733b8}</Project>
+      <Name>UcmaKit.Rtc</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
