--- a/UcmaKit.Rtc/UcmaKit.Rtc.csproj
+++ b/UcmaKit.Rtc/UcmaKit.Rtc.csproj
@@ -81,9 +81,9 @@
     <Compile Include="RtcApplicationConfigurationElement.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\UcmaKit.Rtc.Util\ISI.Rtc.Util.csproj">
+    <ProjectReference Include="..\UcmaKit.Rtc.Util\UcmaKit.Rtc.Util.csproj">
       <Project>{55a21f94-8a1e-4b86-922c-8a9a3ed63e89}</Project>
-      <Name>ISI.Rtc.Util</Name>
+      <Name>UcmaKit.Rtc.Util</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
