--- a/UcmaKit.Rtc.Acd.Service/App.config
+++ b/UcmaKit.Rtc.Acd.Service/App.config
@@ -4,18 +4,18 @@
 
     <configSections>
         <section
-            name="isi.rtc"
-            type="ISI.Rtc.RtcConfigurationSection, ISI.Rtc" />
+            name="UcmaKit.Rtc"
+            type="UcmaKit.Rtc.RtcConfigurationSection, UcmaKit.Rtc" />
     </configSections>
 
-    <isi.rtc>
+    <UcmaKit.Rtc>
         <applications>
             <add
                 applicationId="urn:application:isi-acd"
                 userAgent="ISI Automated Call Distribution"
-                type="ISI.Rtc.Acd.AcdApplication, ISI.Rtc.Acd" />
+                type="UcmaKit.Rtc.Acd.AcdApplication, UcmaKit.Rtc.Acd" />
         </applications>
-    </isi.rtc>
+    </UcmaKit.Rtc>
 
     <startup>
         <supportedRuntime
