--- a/UcmaKit.Rtc.Queue.Service/App.config
+++ b/UcmaKit.Rtc.Queue.Service/App.config
@@ -3,8 +3,8 @@
 
     <configSections>
         <section
-            name="isi.rtc"
-            type="ISI.Rtc.RtcConfigurationSection, ISI.Rtc" />
+            name="UcmaKit.Rtc"
+            type="UcmaKit.Rtc.RtcConfigurationSection, UcmaKit.Rtc" />
     </configSections>
 
     <startup>
@@ -13,10 +13,10 @@
             sku=".NETFramework,Version=v4.5" />
     </startup>
 
-    <isi.rtc>
+    <UcmaKit.Rtc>
         <applications>
             <add
-                type="ISI.Rtc.Queue.QueueApplication, ISI.Rtc.Queue"
+                type="UcmaKit.Rtc.Queue.QueueApplication, UcmaKit.Rtc.Queue"
                 autoProvision="false"
                 userAgent="ISI Queue (debug)"
                 gruu="sip:station-1.ad.isillc.com@isillc.com;gruu;opaque=srvr:station-1-debug:7IyHtdhgjli08Dk_6KoWbwAA"
@@ -30,5 +30,5 @@
                 </endpoints>
             </add>
         </applications>
-    </isi.rtc>
+    </UcmaKit.Rtc>
 </configuration>
