--- a/UcmaKit.Rtc.Acd.App/App.config
+++ b/UcmaKit.Rtc.Acd.App/App.config
@@ -4,14 +4,14 @@
 
     <configSections>
         <section
-            name="isi.rtc"
-            type="ISI.Rtc.RtcConfigurationSection, ISI.Rtc" />
+            name="UcmaKit.Rtc"
+            type="UcmaKit.Rtc.RtcConfigurationSection, UcmaKit.Rtc" />
     </configSections>
 
-    <isi.rtc>
+    <UcmaKit.Rtc>
         <applications>
             <add
-                type="ISI.Rtc.Acd.AcdApplication, ISI.Rtc.Acd"
+                type="UcmaKit.Rtc.Acd.AcdApplication, UcmaKit.Rtc.Acd"
                 autoProvision="false"
                 userAgent="ISI ACD (debug)"
                 gruu="sip:station-1.ad.isillc.com@isillc.com;gruu;opaque=srvr:station-1-debug:7IyHtdhgjli08Dk_6KoWbwAA"
@@ -25,7 +25,7 @@
                 </endpoints>
             </add>
         </applications>
-    </isi.rtc>
+    </UcmaKit.Rtc>
 
     <startup>
         <supportedRuntime
