--- a/UcmaKit.Rtc.Queue.Service/UcmaKit.Rtc.Queue.Service.csproj
+++ b/UcmaKit.Rtc.Queue.Service/UcmaKit.Rtc.Queue.Service.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{76E0DEF5-7B70-4F8C-8882-6594FE79072C}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ISI.Rtc.Queue.Service</RootNamespace>
-    <AssemblyName>ISI.Rtc.Queue.Service</AssemblyName>
+    <RootNamespace>UcmaKit.Rtc.Queue.Service</RootNamespace>
+    <AssemblyName>UcmaKit.Rtc.Queue.Service</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
