--- a/UcmaKit.Rtc.Util/UcmaKit.Rtc.Util.csproj
+++ b/UcmaKit.Rtc.Util/UcmaKit.Rtc.Util.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{55A21F94-8A1E-4B86-922C-8A9A3ED63E89}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ISI.Rtc.Util</RootNamespace>
-    <AssemblyName>ISI.Rtc.Util</AssemblyName>
+    <RootNamespace>UcmaKit.Rtc.Util</RootNamespace>
+    <AssemblyName>UcmaKit.Rtc.Util</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
