--- a/UcmaKit.Rtc.VoiceXml.App/UcmaKit.Rtc.VoiceXml.App.csproj
+++ b/UcmaKit.Rtc.VoiceXml.App/UcmaKit.Rtc.VoiceXml.App.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{31BA5546-2CC4-48DC-BD43-8CC095FAAFAC}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ISI.Rtc.VoiceXml.App</RootNamespace>
-    <AssemblyName>ISI.Rtc.VoiceXml.App</AssemblyName>
+    <RootNamespace>UcmaKit.Rtc.VoiceXml.App</RootNamespace>
+    <AssemblyName>UcmaKit.Rtc.VoiceXml.App</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
