--- a/UcmaKit.Rtc.VoiceXml.Core/App.config
+++ b/UcmaKit.Rtc.VoiceXml.Core/App.config
@@ -4,18 +4,18 @@
 
     <configSections>
         <section
-            name="isi.rtc"
-            type="ISI.Rtc.RtcConfigurationSection, ISI.Rtc" />
+            name="UcmaKit.Rtc"
+            type="UcmaKit.Rtc.RtcConfigurationSection, UcmaKit.Rtc" />
     </configSections>
 
-    <isi.rtc>
+    <UcmaKit.Rtc>
         <applications>
             <add
                 applicationId="urn:application:isi-voicexml"
                 userAgent="ISI VoiceXml"
-                type="ISI.Rtc.VoiceXml.VoiceXmlApplication, ISI.Rtc.VoiceXml" />
+                type="UcmaKit.Rtc.VoiceXml.VoiceXmlApplication, UcmaKit.Rtc.VoiceXml" />
         </applications>
-    </isi.rtc>
+    </UcmaKit.Rtc>
 
     <connectionStrings>
         <add
