--- a/UcmaKit.Rtc.VoiceXml.Core/UcmaKit.Rtc.VoiceXml.Service.csproj
+++ b/UcmaKit.Rtc.VoiceXml.Core/UcmaKit.Rtc.VoiceXml.Service.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{4BD7613A-5207-4BC9-9C53-D033245ACFDD}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ISI.Rtc.VoiceXml.Service</RootNamespace>
-    <AssemblyName>ISI.Rtc.VoiceXml.Service</AssemblyName>
+    <RootNamespace>UcmaKit.Rtc.VoiceXml.Service</RootNamespace>
+    <AssemblyName>UcmaKit.Rtc.VoiceXml.Service</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
