--- a/UcmaKit.Rtc.VoiceXml.Data/UcmaKit.Rtc.VoiceXml.Data.csproj
+++ b/UcmaKit.Rtc.VoiceXml.Data/UcmaKit.Rtc.VoiceXml.Data.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{DC6D7815-511F-49EC-8FE8-48F96E44FD6B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ISI.Rtc.VoiceXml.Data</RootNamespace>
-    <AssemblyName>ISI.Rtc.VoiceXml.Data</AssemblyName>
+    <RootNamespace>UcmaKit.Rtc.VoiceXml.Data</RootNamespace>
+    <AssemblyName>UcmaKit.Rtc.VoiceXml.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
