Fixed up configuration a bit.

--- a/UcmaKit.Rtc.VoiceXml.Core/App.config
+++ b/UcmaKit.Rtc.VoiceXml.Core/App.config
@@ -8,14 +8,14 @@
             type="UcmaKit.Rtc.RtcConfigurationSection, UcmaKit.Rtc" />
     </configSections>
 
-    <UcmaKit.Rtc>
+    <ucmakit.rtc>
         <applications>
             <add
-                applicationId="urn:application:isi-voicexml"
-                userAgent="ISI VoiceXml"
+                applicationId="urn:application:voicexml"
+                userAgent="UCMA VoiceXml"
                 type="UcmaKit.Rtc.VoiceXml.VoiceXmlApplication, UcmaKit.Rtc.VoiceXml" />
         </applications>
-    </UcmaKit.Rtc>
+    </ucmakit.rtc>
 
     <connectionStrings>
         <add
